# accelerate-jacobi

./: LICENSE  README.md  accelerate-jacobi.cabal  stack.yaml
src/: Main.hs
