name:                accelerate-jacobi
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/yiyunliu/accelerate-jacobi#readme
license:             BSD3
license-file:        LICENSE
author:              Yiyun Liu
maintainer:          liuyiyun@terpmail.umd.edu
copyright:           2019 Yiyun Liu
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable accelerate-jacobi
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , accelerate
                     , accelerate-llvm-native
                     , criterion
                     , deepseq
  ghc-options:         -rtsopts -threaded -Wall
